--- a/contact.html
+++ b/contact.html
@@ -120,8 +120,8 @@
                   </div>
 
                   <div class="col-md-4 footerContainerMid">
-                      <h4 class="footerTitle">Visit & Share!</h4>
-                      <p>
+                      <h4 class="footerTitleMid">Visit & Share!</h4>
+                      <p class="shareLinks">
                           <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
@@ -135,7 +135,11 @@
                           <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                       </p>
-                      <p><small>© Elizabeth Muniot | Website Created with Care <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
+                    <div class="footerLinkMid">  
+                      <p><small>© Elizabeth Muniot 2020</small</p> 
+                      <p class="footerLink1"><small>Website Created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
+                      <p class="footerLink2"><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p> 
+                    </div>    
                   </div>
 
                   <div class="col-md-4 footerContainerRight">
@@ -148,8 +152,8 @@
                           <p class="footerClassText">Click subscribe to sign up for our newsletter.</p>
                       </div>
                       <div class="contactFooter">
-                          <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
-                          <p class="footerClassText">contact me directly</p>                           
+                          <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
+                          <p class="footerClassText">leave me a message</p>                           
                       </div>
 
                   </div>
