--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 </header>
 
 
-<div class="section-container no-padding">
+<div class="section-container no-padding subContainer">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -163,28 +163,23 @@
 </footer>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function (event) {
-    navActivePage();
-  });
+document.addEventListener("DOMContentLoaded", function (event) {
+  navActivePage();
+});
 </script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
 <script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
--->
-<!-- Google maps  -->
-<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzA22auDNIFSRiTPytfZVhtuFG_KHBhFQ&callback=googleMapInit"></script> -->
-<!-- end Google Maps -->
+(function (i, s, o, g, r, a, m) {
+  i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+    (i[r].q = i[r].q || []).push(arguments)
+  }, i[r].l = 1 * new Date(); a = s.createElement(o),
+    m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+ga('create', 'UA-XXXXX-X', 'auto');
+ga('send', 'pageview');
+</script> -->
 
 
 
