color scheme, footer links

--- a/readMoreYoga.html
+++ b/readMoreYoga.html
@@ -79,7 +79,7 @@
                           <img class="img-responsive" src="./assets/images/aboutImg1.jpg">
                       </div>
                       <div class="col-md-6">
-                          <img class="img-responsive" src="./assets/images/aboutImg2.jpg">
+                          <img class="img-responsive" src="./assets/images/yoga1.png">
                       </div>
                   </div>
 
