--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <div class="row">
 
             <div class="col-xs-12">
-               <img class="img-responsive" src="./assets/images/heroAbout.jpg">
+               <img class="img-responsive aboutHeroImg" src="./assets/images/aboutImg5.jpg">
             </div>
         </div>
     </div>
@@ -75,10 +75,10 @@
 
                     <div class="row section-container-spacer">
                         <div class="col-md-6">
-                            <img class="img-responsive" src="./assets/images/aboutImg1.jpg">
+                            <img class="img-responsive" src="./assets/images/aboutImg6.png">
                         </div>
                         <div class="col-md-6">
-                            <img class="img-responsive" src="./assets/images/aboutImg2.jpg">
+                            <img class="img-responsive" src="./assets/images/aboutImg4.png">
                         </div>
                     </div>
 
