--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div>
                         <p class="subTitle">Online group classes and private instruction.</p>
                         <p>I was intimidated by yoga for a long time, but -- as cliché as it sounds -- yoga changed my life, so I am passionate about sharing it with others.</p>
-                        <p>You think you’re not bendy or flexible enough for yoga. Yoga is woo-woo hippie crap. You want to check it out, but you don’t know where to get started... <a href="readMoreYoga.html">Read More</a></p>
+                        <p>You think you’re not bendy or flexible enough for yoga. Yoga is woo-woo hippie crap. You want to check it out, but you don’t know where to get started... <a class="readMore" href="readMoreYoga.html">Read More</a></p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -102,7 +102,7 @@
                     <div>
                         <p class="subTitle">Identify and remove barriers that get in the way of unlocking your potential.</p>
                         <p>It’s not always easy to make change happen. We need support from others to dig deep into ourselves and find the courage, strength, and determination to change.</p>
-                        <p>Whether you want to change habits or patterns that no longer serve you; find a new job or completely switch careers; leave a long-term relationship or become a parent, I’ll help you make the transition with power and confidence... <a href="readMoreCoach.html">Read More</a></p>
+                        <p>Whether you want to change habits or patterns that no longer serve you; find a new job or completely switch careers; leave a long-term relationship or become a parent, I’ll help you make the transition with power and confidence... <a class="readMore" href="readMoreCoach.html">Read More</a></p>
                         
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     </div>
                     <div>
                         <p class="subTitle">Build a more effective team, board or organization.</p>
-                        <p>I pair my training in organization development with more than two decades of nonprofit experience in fundraising and leadership development to help you build the capacity of your organization. I specialize in team building (board development, staff retreats), volunteer management, and fundraising... <a href="readMoreConsult.html">Read More</a></p> 
+                        <p>I pair my training in organization development with more than two decades of nonprofit experience in fundraising and leadership development to help you build the capacity of your organization. I specialize in team building (board development, staff retreats), volunteer management, and fundraising... <a class="readMore" href="readMoreConsult.html">Read More</a></p> 
                         
                     </div>
                 </div>
@@ -129,9 +129,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="text-center">
-                    <h2>Featured Events</h2>
-                    <p class="eventDescription"> Please subscribe below to hear more about upcoming events and workshops. </p>
-                    <a href="./contact.html" title="" class="btn btn-primary btn-lg">Click Here</a>
+                    <h2 class="eventDescription1">Featured Events</h2>
+                    <p class="eventDescription2"> Please subscribe below to hear more about upcoming events and workshops. </p>
+                    <a href="./contact.html" title="" class="btn btn-primary btn-lg homePageBtn">Click Here</a>
                 </div>
             </div>
         </div>
