footer links, button design, colors

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                             <div class="response" id="mce-success-response" style="display:none"></div>
                           <!-- </div> real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_89dc1dab759e1bcec662bf8d8_5df776930e" tabindex="-1" value=""></div>
-                            <div class="clear"><input type="submit" class="btn btn-primary btn-lg" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                            <div class="clear"><input type="submit" class="btn btn-primary btn-lg classButtons" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                           </div> 
                         </form>
                     </div>
@@ -122,16 +122,16 @@
                   <div class="col-md-4 footerContainerMid">
                       <h4 class="footerTitleMid">Visit & Share!</h4>
                       <p class="shareLinks">
-                          <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <!-- <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </a>
+                        </a> -->
                         <!-- <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-twitter" aria-hidden="true"></i>
                         </a> -->
-                        <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                        <a href="https://www.linkedin.com/in/elizabethmuniot/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-linkedin" aria-hidden="true"></i>
                         </a>
-                        <a href="https://www.instagram.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                        <a href="https://www.instagram.com/elizabethmuniot/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                       </p>
