--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -62,9 +62,12 @@
                     <h1>Coaching</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
-                    <p>As your coach, I’ll help you identify your passions, deepest interests, innate gifts that truly embody who they are and will bring them genuine fulfillment, purpose, etc. I’ll ask questions, offer observations, and provide tools in support of your ability to dig deep and do the powerful work of growth and development. This is not a substitution for therapy. Email me and we can arrange a time to talk. </p>
-                    <p>I found yoga super intimidating for a long time. I took my first yoga class at the 92nd Street Y more than 20 years ago. I pretty much hated it. I didn’t feel bendy or flexible enough. Everyone around me seemed to know what was happening. I didn’t get all the chanting, and the Sanskrit. I would have rather been doing anything else, but I did feel calmer. </p>                   
-                </div>
+                    <p>My goal for our coaching is for you to become fully aligned with your inner being—your true self— so you can identify your dreams and fulfill your deepest desires. </p>
+                    <p>Sounds woo-woo. I know. Too good to be true. I know. </p>
+                    <p>But I believe it’s possible so let’s give it a shot. We will slow down. Breathe. Recognize what is going on and, BE IN IT, allow it happen; get curious about (instead of judging or comparing), and meet whatever is coming up a kind and gentle way.</p>                  
+                    <p>I will guide you through self-study and self-inquiry to identify the patterns and behaviors you want to change and goals you want to accomplish. Once you know what patterns you want to change, you will pay attention to when and how those patterns show up so you can get curious: What triggers them? Are they internal or external triggers? How do I best take care of myself right now?</p>
+                    <p>As your coach, I’ll help you identify your passions, deepest interests, innate gifts that truly embody who they are and will bring them genuine fulfillment, purpose, etc. I’ll ask questions, offer observations, and provide tools in support of your ability to dig deep and do the powerful work of growth and development. I will support you to learn how to be more present in the moment to harness your innate power and energy to achieve your goals.</p>
+                  </div>
             </div>
         </div>
     </div>
@@ -99,7 +102,8 @@
                 <div class="col-md-8 col-md-offset-2">
                     <p>Elizabeth’s holistic approach was critical for me and I cannot credit her enough for my professional and leadership growth. With her guidance, I have a clearer understanding of my passions; applying my skills: re-evaluating my performance; and seeking experiences – purposefully.  – Brian K.C. </p>
                     <p>Elizabeth had a big impact on me. She is a gifted teacher with an empathic ability to read and feel into the people around you. I could feel her benevolent energy all weekend encircling me like a warm hug. She is changing people's lives, including mine. – Sarah G. </p>
-                    <p>With Elizabeth, I made a mind/body connection that will serve me for a long time. I feel good in my body and I trust it in a way I haven’t for a while. I feel beautiful again. And centered again. – Terri S.</p>                    
+                    <p>With Elizabeth, I made a mind/body connection that will serve me for a long time. I feel good in my body and I trust it in a way I haven’t for a while. I feel beautiful again. And centered again. 
+                      – Terri S.</p>                    
                 </div>
             </div>
         </div>
