--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                     <div class="text-center">
                     <h1>Hello!</h1>
                      </div>   
-                        <p class="section-container-spacer">Elizabeth Muniot specializes in developing individuals, teams and organizations committed to develop structures and processes that support long-lasting change. Through her coaching, teaching, and facilitation, Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of unlocking potential and their achieving goals.</p>
+                        <p class="section-container-spacer">Through her coaching, teaching, and facilitation, Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of unlocking potential and their achieving goals.</p>
 
                     <div class="row section-container-spacer">
                         <div class="col-md-6">
@@ -87,7 +87,7 @@
                 <div class="col-xs-12 col-md-8 col-md-offset-2">              
                         <p> Prior to her consulting work, Elizabeth was the Assistant Director of George Mason University’s Center for Social Entrepreneurship, where she developed co-curricular activities, facilitated workshops, mentored students, and served as the Director of the Social Innovation Program. At both Share Our Strength and the Lupus Foundation of America - DMV Chapter, Elizabeth mobilized diverse volunteer networks to consistently exceed fundraising goals. Working in partnership with national corporations and nonprofits, Elizabeth has developed community service projects, which served as an integral part of strategic leadership training and team-building programs. She also served as the Director of Corporate Relations for The Arc of the United States, initiating the organization’s first media sponsorship.</p>
                         <p> Elizabeth holds a B.A. in Political Science from Barnard College, Columbia University and a M.S. in Organization Development from the American University. She has completed more than 600 hours of yoga teacher training. She lives outside Washington, D.C. with her family.</p>
-                            <small class="signature pull-right">Elizabeth Muniot</small>
+                            <!-- <small class="signature pull-right">Elizabeth Muniot</small> -->
                 </div>
             </div>
 
