--- a/services.html
+++ b/services.html
@@ -70,8 +70,8 @@
             <div class="col-md-3 ">
                 <div class="pricing-card pricing-primary pricing-first">
                     <h3>Virtual Yoga</h3>
-                    <h4 class="cardDescription">Drop-in Class</h4>
-                    <h6 class="price">15 <span>$/hour</span></h6>
+                    <h4 class="cardDescription1">Drop-in Class</h4>
+                    <h6 class="price">15</h6>
                 </div>
                 <div class="pricing-features">
                     <!-- <ul class="features">
@@ -89,8 +89,8 @@
             <div class="col-md-3">
                 <div class="pricing-card pricing-info pricing-second">
                     <h3>Yoga Bundle</h3>
-                    <h4 class="cardDescription">5 Classes</h4>
-                    <h6 class="price">50 <span>$/total</span></h6>
+                    <h4 class="cardDescription2">5 Classes</h4>
+                    <h6 class="price">50</h6>
                 </div>
                 <div class="pricing-features">
                     <!-- <ul class="features">
@@ -106,8 +106,8 @@
             <div class="col-md-3">
                 <div class="pricing-card pricing-secondary pricing-third">
                     <h3>Private Yoga</h3>
-                    <h4 class="cardDescription">Individualized Yoga</h4>
-                    <h6 class="price">85 <span>$/session</span></h6>
+                    <h4 class="cardDescription3">Individualized Yoga</h4>
+                    <h6 class="price">85</h6>
                 </div>
                 <div class="pricing-features">
                     <!-- <ul class="features">
@@ -121,8 +121,8 @@
             </div>
             <div class="col-md-3">
               <div class="pricing-card pricing-secondary pricing-fourth">
-                  <h3>Coaching Change</h3>
-                  <h4 class="cardDescription">Let's Talk</h4>
+                  <h3>Coaching</h3>
+                  <h4 class="cardDescription4">Let's Talk</h4>
                   <h6 class="price"> <span></span></h6>
               </div>
               <div class="pricing-features">
