--- a/services.html
+++ b/services.html
@@ -131,7 +131,7 @@
                       <li>Gravida arcu ac tortor dignissim convallis aenean</li>
                       <li>Gravida arcu ac tortor dignissim</li>
                   </ul> -->
-                  <a href="contact.html" class="btn btn-primary classButtons" title="">Contact Me</a>
+                  <a href="mailto:elizabethmuniot@gmail.com" class="btn btn-primary classButtons" title="">Contact Me</a>
               </div>
           </div>
         </div>
