--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
   <!-- <link href="./assets/favicon.ico" rel="icon"> -->
-  <link rel="icon" href="guru.png" type="image/x-icon">
+  <!-- <link rel="icon" href="guru.png" type="image/x-icon"> -->
   <link href="./main.a3f694c0.css" rel="stylesheet">
 
   <title>Sage Change - Elizabeth Muniot</title>  
@@ -70,10 +70,10 @@
 
 <div class="section-container border-section-container section-container-home">
     <div class="container">
-            <div class="row">
+            <div class="row row-center">
                 <div class="col-md-12 section-container-spacer">
-                    <div class="text-center">
-                        <h2>Welcome to Sage Change</h2>
+                    <div class="text-center text-center1">
+                        <h2 class="titleSmartPhone">Welcome to Sage Change</h2>
                         <p class="subTitle"> Yoga + Coaching for Sustained Change</p> 
                         <p></p>         
                     </div>
@@ -81,7 +81,7 @@
 
                 <div class="col-md-4 col-container col-container1">
                     <div class="fa-container">
-                      <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
+                      <i class="fa heartLogo fa-heart-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
                         <h3>Yoga</h3>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-md-4 col-container2">
                     <div class="fa-container">
-                      <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
+                      <i class="fa commentLogo fa-comment-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
                         <h3>Coaching</h3>
@@ -128,8 +128,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-center">
-                    <h2 class="eventDescription1">Free 30-minute Session</h2>
+                <div class="text-center text-center2">
+                    <h2 class="eventDescription1">Free 30-Minute Session</h2>
                     <p class="eventDescription2">I'll reach out to arrange a time for us to connect.</p>
                     <a href="./contact.html" title="" class="btn btn-primary btn-lg homePageBtn">I'm in</a>
                 </div>
