--- a/readMoreYoga.html
+++ b/readMoreYoga.html
@@ -61,9 +61,9 @@
                     <h1>Yoga</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
-                    <p>I teach interactive yoga via Zoom. I like to have a dialogue, where clients can ask questions or chime in if they need clarification about something. Zoom allows me to demonstrate a pose and get to see my students in real time, so I can give suggestions, modifications and words of encouragement. Sign up for a free Zoom class. </p>
+                    <p>I like teaching people who are skeptical about yoga. We'll move. We'll breathe. Two things you do all the time, every day. It’s simple. I promise. I teach interactive yoga via Zoom. I like to have a dialogue, where clients can ask questions or chime in if they need clarification about something. Zoom allows me to demonstrate a pose and get to see my students in real time, so I can give suggestions, modifications and words of encouragement. Sign up for a free Zoom class. </p>
                     <p>I found yoga super intimidating for a long time. I took my first yoga class at the 92nd Street Y more than 20 years ago. I pretty much hated it. I didn’t feel bendy or flexible enough. Everyone around me seemed to know what was happening. I didn’t get all the chanting, and the Sanskrit. I would have rather been doing anything else, but I did feel calmer. </p>
-                    <p>After finishing grad school in 2011, I went to Costa Rica for my first yoga retreat, which I didn’t realize was a 100 hour teacher training. My science geek awoke with the anatomy lessons, and the combination of the physical/breathe/mind practice awoke a dormant spiritual interest. When I got back to DC, I completed 500 hours of training through YogaWorks. Curious? Want to know more? Email me and we can arrange a time to talk.</p>
+                    <p>After finishing grad school in 2011, I went to Costa Rica for my first yoga retreat, which I didn’t realize was a 100 hour teacher training. My science geek awoke with the anatomy lessons, and the combination of the physical/breathe/mind practice awoke a dormant spiritual interest. When I got back to DC, I completed 500 hours of training through YogaWorks. Curious? Want to know more? Email me <a href="mailto:elizabethmuniot@gmail.com" class="yogaContactBtn" title="">here </a>and we can arrange a time to talk. Please also <a href="contact.html" class="yogaSubBtn" title="">subscribe </a> to sign up for our newsletter.</p>
                 </div>
             </div>
         </div>
@@ -76,12 +76,12 @@
              <div class="col-xs-12 col-md-8 col-md-offset-2">   
                   <div class="row section-container-spacer">
                       <div class="col-md-6">
-                          <img class="img-responsive" src="./assets/images/aboutImg1.jpg">
+                          <img class="img-responsive aboutYogaImg" src="./assets/images/aboutImg1.jpg">
                       </div>
-                      <div class="col-md-6">
+                      <!-- <div class="col-md-6">
                           <img class="img-responsive" src="./assets/images/yoga1.png">
                       </div>
-                  </div>
+                  </div> -->
 
              </div>
           </div>
