--- a/terms85.html
+++ b/terms85.html
@@ -83,7 +83,7 @@
             </div>
               
             <div class="btn-container ">
-              <button><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=C5M5CDC5AEKJS&lc=US&item_name=5%20classes%20%2450&amount=50%2e00&currency_code=USD&button_subtype=services&bn=PP%2dBuyNowBF%3abtn_buynowCC_LG%2egif%3aNonHosted"><input type="submit" id="waiverBtn" name="sub" class="btn btn-primary btn15" value="Click to Pay" disabled="disabled"></a></button>                                     
+              <button><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=muniot%40gmail%2ecom&lc=US&item_name=Private%20Yoga&amount=85%2e00&currency_code=USD&button_subtype=services&bn=PP%2dBuyNowBF%3abtn_buynowCC_LG%2egif%3aNonHosted"><input type="submit" id="waiverBtn" name="sub" class="btn btn-primary btn15" value="Click to Pay" disabled="disabled"></a></button>                                     
             </div>   
     </div>        
 
