--- a/about.html
+++ b/about.html
@@ -57,14 +57,14 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 aboutImgContainer">
                <img class="img-responsive aboutHeroImg" src="./assets/images/aboutImg5.jpg">
             </div>
         </div>
     </div>
 </div>
 
-<div class="section-container">
+<div class="section-container sectionContAbout">
     <div class="container">
         <div class="row">
                <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -75,10 +75,10 @@
 
                     <div class="row section-container-spacer">
                         <div class="col-md-6">
-                            <img class="img-responsive" src="./assets/images/aboutImg6.png">
+                            <img class="img-responsive dreamImg" src="./assets/images/aboutImg6.png">
                         </div>
                         <div class="col-md-6">
-                            <img class="img-responsive" src="./assets/images/aboutImg4.png">
+                            <img class="img-responsive yearImg" src="./assets/images/aboutImg4.png">
                         </div>
                     </div>
 
