--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
 <div class="section-container card-container">
     <div class="container">
         <div class="row section-container-spacer">
-            <div class="col-xs-12">
+            <div class="col-xs-12 servicesColTop">
                 <div class="text-center">
                     <h1>Services</h1>
                 </div>
