--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
  <!-- Add your content of header -->
 <header>
-  <nav class="navbar  navbar-fixed-top navbar-default">
+  <nav class="navbar navbar-fixed-top navbar-default">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle uarr collapsed" data-toggle="collapse" data-target="#navbar-collapse-uarr">
@@ -61,7 +61,7 @@
            
             <div class="col-md-6 heroTitle">
                 <h1 id="firstName2">Sage Change<span id="studioName2"></span></h1>
-                <p class="responsePad" id="titleDescription"><small class="signature pull-right">your partner for intentional transitions</small></p>
+                <p class="responsePad" id="titleDescription"><small class="signature pull-right homeDescription">your partner for intentional transitions</small></p>
             </div>
 
         </div>
@@ -74,7 +74,7 @@
                 <div class="col-md-12 section-container-spacer">
                     <div class="text-center text-center1">
                         <h2 class="titleSmartPhone">Welcome to Sage Change</h2>
-                        <p class="subTitle"> Yoga + Coaching for Sustained Change</p> 
+                        <p class="subTitle homeDescription2"> Yoga + Coaching for Sustained Change</p> 
                         <p></p>         
                     </div>
                 </div>
