--- a/readMoreYoga.html
+++ b/readMoreYoga.html
@@ -58,7 +58,7 @@
         <div class="row section-container-spacer">
             <div class="col-xs-12 yogaColTop">
                 <div class="text-center">
-                    <h1>Yoga</h1>
+                    <h1 class="yogaTitle">Yoga</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <p>I like teaching people who are skeptical about yoga. We'll move. We'll breathe. Two things you do all the time, every day. It’s simple. I promise. I teach interactive yoga via Zoom. I like to have a dialogue, where clients can ask questions or chime in if they need clarification about something. Zoom allows me to demonstrate a pose and get to see my students in real time, so I can give suggestions, modifications and words of encouragement. Sign up for a free Zoom class. </p>
@@ -94,7 +94,7 @@
         <div class="row section-container-spacer">
             <div class="col-xs-12 yogaColBottom">
                 <div class="text-center">
-                    <h1>Testimonials</h1>
+                    <h1 class="testTitle" >Testimonials</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <p>Elizabeth gave me a new respect for yoga positions. I appreciate her hands-on approach at helping understanding yoga and the value of each move. When I do moves now, I focus on making sure I am doing them to the best of my ability and not comparing myself to others or my own self-talk! For beginners I would highly recommend her!  – Cathy L. </p>
