--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
         <div class="row section-container-spacer">
             <div class="col-xs-12 servicesColTop">
                 <div class="text-center">
-                    <h1>Services</h1>
+                    <h1 class="serviceTitle">Services</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <p></p>
