--- a/terms15.html
+++ b/terms15.html
@@ -54,9 +54,9 @@
 <div class="section-container">
   <div class="container">
       <div class="row section-container-spacer">
-          <div class="col-xs-12">
+          <div class="col-xs-12 termTitle">
               <div class="text-center">
-                  <h1>Class Info</h1>
+                  <h1 class="termH1">Class Info</h1>
               </div>
               <div class="col-md-8 col-md-offset-2">
                   <p>Thank you for your interest in the one-time session for $15, please take a moment to read and review the PDF documents below prior to checkout. 
@@ -83,7 +83,7 @@
                 </div>
                   
                 <div class="btn-container ">
-                  <button><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=C5M5CDC5AEKJS&lc=US&item_name=Drop%20In%20%2415&amount=15%2e00&currency_code=USD&button_subtype=services&bn=PP%2dBuyNowBF%3abtn_buynowCC_LG%2egif%3aNonHosted"><input type="submit" id="waiverBtn" name="sub" class="btn btn-primary btn15" value="Click to Pay" disabled="disabled"></a></button>                                     
+                  <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=C5M5CDC5AEKJS&lc=US&item_name=Drop%20In%20%2415&amount=15%2e00&currency_code=USD&button_subtype=services&bn=PP%2dBuyNowBF%3abtn_buynowCC_LG%2egif%3aNonHosted"><input type="submit" id="waiverBtn" name="sub" class="btn btn-primary btn15" value="Click to Pay" disabled="disabled"></a>                                     
                 </div>   
         </div>        
   </div>
