--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="width=device-width,initial-scale=1" maximum-scale=1.0, user-scalable=no name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
@@ -54,7 +54,7 @@
 
 
 
-<div class="white-text-container background-image-container" style="background-image: url('./assets/images/hero3.jpg')">
+<div class="white-text-container background-image-container heroImgHome" style="background-image: url('./assets/images/hero3.jpg')">
     <div class="opacity"></div>
     <div class="container">
         <div class="row">
