--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" maximum-scale=1.0, user-scalable=no name="viewport">
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no name=viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
