--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
   });
 </script>
 
+<script>
+  document.addEventListener('touchmove', function (event) {
+    if (event.scale !== 1) { event.preventDefault(); }
+  }, { passive: false });
+</script>
+
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
 <script>
