js lock pinch feature

--- a/terms50.html
+++ b/terms50.html
@@ -167,7 +167,9 @@
   </script>
   
   --> 
-  <script type="text/javascript" src="./main.41beeca9.js"></script></body>
+  <script type="text/javascript" src="./main.41beeca9.js"></script>
   <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="utility.js"></script>
+</body>
   
   </html>
