--- a/contact.html
+++ b/contact.html
@@ -183,6 +183,8 @@ ga('send', 'pageview');
 
 
 
-<script type="text/javascript" src="./main.41beeca9.js"></script></body>
+<script type="text/javascript" src="./main.41beeca9.js"></script>
+<script type="text/javascript" src="utility.js"></script>
+</body>
 
 </html>
