--- a/index.html
+++ b/index.html
@@ -196,12 +196,6 @@
   });
 </script>
 
-<script>
-  document.addEventListener('touchmove', function (event) {
-    if (event.scale !== 1) { event.preventDefault(); }
-  }, { passive: false });
-</script>
-
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
 <script>
@@ -217,6 +211,8 @@
 
 -->
 
-<script type="text/javascript" src="./main.41beeca9.js"></script></body>
+<script type="text/javascript" src="./main.41beeca9.js"></script>
+<script type="text/javascript" src="utility.js"></script>
+</body>
 
 </html>
