--- a/readMoreConsult.html
+++ b/readMoreConsult.html
@@ -179,6 +179,8 @@
   
   -->
   
-  <script type="text/javascript" src="./main.41beeca9.js"></script></body>
+  <script type="text/javascript" src="./main.41beeca9.js"></script>
+  <script type="text/javascript" src="utility.js"></script>
+  </body>
   
   </html>
