--- a/services.html
+++ b/services.html
@@ -211,6 +211,8 @@
 </script>
 
 --> 
-<script type="text/javascript" src="./main.41beeca9.js"></script></body>
+<script type="text/javascript" src="./main.41beeca9.js"></script>
+<script type="text/javascript" src="utility.js"></script>
+</body>
 
 </html>
