media SP Portrait

--- a/terms15.html
+++ b/terms15.html
@@ -59,7 +59,7 @@
                   <h1 class="termH1">Class Info</h1>
               </div>
               <div class="col-md-8 col-md-offset-2">
-                  <p>Thank you for your interest in the one-time session for $15, please take a moment to read and review the PDF documents below prior to checkout. 
+                  <p class="termsDescription">Thank you for your interest in the one-time session for $15, please take a moment to read and review the PDF documents below prior to checkout. 
                   </p>
               </div>
           </div>
