--- a/terms85.html
+++ b/terms85.html
@@ -56,10 +56,10 @@
       <div class="row section-container-spacer">
           <div class="col-xs-12 termTitle">
               <div class="text-center">
-                  <h1>Private Class Info</h1>
+                  <h1 class="termH1">Private Class Info</h1>
               </div>
               <div class="col-md-8 col-md-offset-2">
-                  <p>Thank you for your interest in the private class bundle for $85, please take a moment to read and review the PDF documents below prior to checkout. 
+                  <p class="termsDescription">Thank you for your interest in the private class bundle for $85, please take a moment to read and review the PDF documents below prior to checkout. 
                   </p>
               </div>
           </div>
