Media Query Tablets

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                                 <input 
                                 type="checkbox" id="inlineCheckbox1" value="option1"> Email me a copy
                               </label> -->
-                              <label class="checkbox-inline">
+                              <label class="checkbox-inline responsiveCheck">
                                 <input type="checkbox" id="inlineCheckbox2" value="option2"required> I am a human*
                               </label>
                             </div>
@@ -113,7 +113,7 @@
 <footer>
   <div class="section-container footer-container">
       <div class="container">
-          <div class="row">
+          <div class="row responsiveFooter">
                   <div class="col-md-4 footerContainerLeft">
                       <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
                       <p class="footerClassText">Hear my story, and how we can achieve your goals.</p>
