--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
 <footer>
   <div class="section-container footer-container">
       <div class="container">
-          <div class="row">
+          <div class="row responsiveFooter">
                   <div class="col-md-4 footerContainerLeft">
                       <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
                       <p class="footerClassText">Hear my story, and how we can achieve your goals.</p>
