--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <div class="section-container border-section-container section-container-home">
     <div class="container">
-            <div class="row row-center">
+            <div class="row row-center responsiveRow">
                 <div class="col-md-12 section-container-spacer">
                     <div class="text-center text-center1">
                         <h2 class="titleSmartPhone">Welcome to Sage Change</h2>
@@ -142,7 +142,7 @@
  <footer>
     <div class="section-container footer-container">
         <div class="container">
-            <div class="row">
+            <div class="row responsiveFooter">
                     <div class="col-md-4 footerContainerLeft">
                         <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
                         <p class="footerClassText">Hear my story, and how we can achieve your goals.</p>
