--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         <div class="row">
                <div class="col-xs-12 col-md-8 col-md-offset-2">
                     <div class="text-center">
-                    <h1>Hello!</h1>
+                    <h1 class="aboutTitle">Hello!</h1>
                      </div>   
                         <p class="section-container-spacer aboutPara1">Through her coaching, teaching, and facilitation, Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of unlocking potential and their achieving goals.</p>
 
