--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
 
 
 <div class="section-container card-container">
-    <div class="container">
+    <div class="container servicesCol">
         <div class="row section-container-spacer">
             <div class="col-xs-12 servicesColTop">
                 <div class="text-center">
