iPhone 11 media query

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="col-xs-12">
                 <div class="text-center text-center2">
                     <h2 class="eventDescription1">Free 30-Minute Session</h2>
-                    <p class="eventDescription2">I'll reach out to arrange a time for us to connect.</p>
+                    <p class="eventDescription2">Subscribe to receive a 30-minute session.</p>
                     <a href="./contact.html" title="" class="btn btn-primary btn-lg homePageBtn">I'm in</a>
                 </div>
             </div>
