--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -59,7 +59,7 @@
         <div class="row section-container-spacer">
             <div class="col-xs-12 yogaColTop">
                 <div class="text-center">
-                    <h1>Coaching</h1>
+                    <h1 class="coachTitle">Coaching</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <p>My goal for our coaching is for you to become fully aligned with your inner being—your true self— so you can identify your dreams and fulfill your deepest desires. </p>
@@ -115,8 +115,8 @@
       <div class="container">
           <div class="row responsiveFooter">
                   <div class="col-md-4 footerContainerLeft">
-                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
-                      <p class="footerClassText">Hear my story, and how we can achieve your goals.</p>
+                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle1">Learn More</h4></a>
+                      <p class="footerClassText1">Hear my story, and how we can achieve your goals.</p>
                   </div>
 
                   <div class="col-md-4 footerContainerMid">
