--- a/terms85.html
+++ b/terms85.html
@@ -101,8 +101,8 @@
       <div class="container">
           <div class="row responsiveFooter">
                   <div class="col-md-4 footerContainerLeft">
-                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
-                      <p class="footerClassText">Hear my story, and how we can achieve your goals.</p>
+                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle1">Learn More</h4></a>
+                      <p class="footerClassText1">Hear my story, and how we can achieve your goals.</p>
                   </div>
 
                   <div class="col-md-4 footerContainerMid">
