--- a/terms50.html
+++ b/terms50.html
@@ -67,13 +67,13 @@
       
       <div class="row terms15">
         <div id="position1" class="col-md-4">
-            <div id="priceTerms" class="pricing-card pricing-primary pricing-first tipsCard">
+            <div id="priceTerms1" class="pricing-card pricing-primary pricing-first tipsCard">
                 <h3 class="zoomTitle"> Class Tips</h3>
                 <a href="Zoom_Instructions.pdf"><button class="btn zoomBtn"><i class="fas fa-file-pdf"></i>PDF</button></a><br>
             </div>
         </div>                                                  
         <div id="position2" class="col-md-4">
-            <div id="priceTerms" class="pricing-card pricing-secondary pricing-fourth waiverCard">
+            <div id="priceTerms2" class="pricing-card pricing-secondary pricing-fourth waiverCard">
                 <h3 class="waiverTitle">Class Waiver</h3>
                 <a href="Final_Waiver.pdf"><button class="btn waiverBtn"><i class="fas fa-file-pdf"></i>PDF</button></a><br>
             
