media Query changes

--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -61,7 +61,7 @@
                 <div class="text-center">
                     <h1 class="coachTitle">Coaching</h1>
                 </div>
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-8 col-md-offset-2 coachPara3">
                     <p>My goal for our coaching is for you to become fully aligned with your inner being—your true self— so you can identify your dreams and fulfill your deepest desires. </p>
                     <p>Sounds woo-woo. I know. Too good to be true. I know. </p>
                     <p>But I believe it’s possible so let’s give it a shot. We will slow down. Breathe. Recognize what is going on and, BE IN IT, allow it happen; get curious about (instead of judging or comparing), and meet whatever is coming up a kind and gentle way.</p>                  
@@ -99,7 +99,7 @@
                 <div class="text-center">
                     <h1>Testimonials</h1>
                 </div>
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-8 col-md-offset-2 coachPara4">
                     <p>Elizabeth’s holistic approach was critical for me and I cannot credit her enough for my professional and leadership growth. With her guidance, I have a clearer understanding of my passions; applying my skills: re-evaluating my performance; and seeking experiences – purposefully.  – Brian K.C. </p>
                     <p>Elizabeth had a big impact on me. She is a gifted teacher with an empathic ability to read and feel into the people around you. I could feel her benevolent energy all weekend encircling me like a warm hug. She is changing people's lives, including mine. – Sarah G. </p>
                     <p>With Elizabeth, I made a mind/body connection that will serve me for a long time. I feel good in my body and I trust it in a way I haven’t for a while. I feel beautiful again. And centered again. 
