--- a/readMoreYoga.html
+++ b/readMoreYoga.html
@@ -96,7 +96,7 @@
                 <div class="text-center">
                     <h1 class="testTitle" >Testimonials</h1>
                 </div>
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-8 col-md-offset-2 aboutYogaPara4">
                     <p>Elizabeth gave me a new respect for yoga positions. I appreciate her hands-on approach at helping understanding yoga and the value of each move. When I do moves now, I focus on making sure I am doing them to the best of my ability and not comparing myself to others or my own self-talk! For beginners I would highly recommend her!  – Cathy L. </p>
                     <p>She's wonderful!!! I found her very easy to talk to and work with. She has a great sense of humor too. Elizabeth is very flexible with your schedule. During my first session, she demonstrated and explained each pose. She answered all of my questions and addressed my concerns. I highly recommend her to anyone wanting to take yoga.  – Donesia M. </p>
                     <p>As a beginner, I appreciate how Elizabeth explains each pose and the foundations of yoga, ensuring that I have good form and understand what each move is meant to do. I also appreciate that she adapts our lessons based on my needs (i.e. knee or hip issues) and is teaching me how to listen to my body.  – Graciela B.</p>
