Media Changes iPad

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
            
             <div class="col-md-6 heroTitle">
                 <h1 id="firstName2">Sage Change<span id="studioName2"></span></h1>
-                <p class="responsePad" id="titleDescription"><small class="signature pull-right homeDescription">your partner for intentional transitions</small></p>
+                <p class="responsePad" id="titleDescription"><small ID="homeHeroDescription" class="signature pull-right homeDescription">your partner for intentional transitions</small></p>
             </div>
 
         </div>
