--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                             <div class="response" id="mce-success-response" style="display:none"></div>
                           <!-- </div> real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_89dc1dab759e1bcec662bf8d8_5df776930e" tabindex="-1" value=""></div>
-                            <div class="clear"><input type="submit" class="btn btn-primary btn-lg classButtons subButton" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                            <div class="clear"><input type="submit" class="btn btn-primary btn-lg subButton" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                           </div> 
                         </form>
                     </div>
