--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
                 <div class="pricing-card pricing-primary pricing-first">
                     <h3>Virtual Yoga</h3>
                     <h4 class="cardDescription1">Drop-in Class</h4>
-                    <h6 class="price">15</h6>
+                    <h6 class="price pricing15">15</h6>
                 </div>
                 <div class="pricing-features">
                     <!-- <ul class="features">
@@ -90,7 +90,7 @@
                 <div class="pricing-card pricing-info pricing-second">
                     <h3 class="cardTitlePricing">Yoga Bundle</h3>
                     <h4 class="cardDescription2">5 Classes</h4>
-                    <h6 class="price">50</h6>
+                    <h6 class="price pricing50">50</h6>
                 </div>
                 <div class="pricing-features">
                     <!-- <ul class="features">
@@ -107,7 +107,7 @@
                 <div class="pricing-card pricing-secondary pricing-third">
                     <h3 class="cardTitlePricing">Private Yoga</h3>
                     <h4 class="cardDescription3">Individualized Yoga</h4>
-                    <h6 class="price">85</h6>
+                    <h6 class="price pricing85">85</h6>
                 </div>
                 <div class="pricing-features">
                     <!-- <ul class="features">
