--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="white-text-container background-image-container heroImgHome" style="background-image: url('./assets/images/hero3.jpg')">
     <div class="opacity"></div>
     <div class="container">
-        <div class="row">
+        <div class="row titleRow">
            
             <div class="col-md-6 heroTitle">
                 <h1 id="firstName2">Sage Change<span id="studioName2"></span></h1>
