--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
 
 
-<div class="white-text-container background-image-container heroImgHome" style="background-image: url('./assets/images/hero3.jpg')">
+<div class="white-text-container background-image-container heroImgHome contHeroFlex" style="background-image: url('./assets/images/hero3.jpg')">
     <div class="opacity"></div>
-    <div class="container contHeroFlex">
+    <div class="container">
         <div class="row titleRow">
            
             <div class="col-md-6 heroTitle">
