--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <div class="white-text-container background-image-container heroImgHome contHeroFlex" style="background-image: url('./assets/images/hero3.jpg')">
     <div class="opacity"></div>
-    <div class="container">
+    <div class="container containerFlex">
         <div class="row titleRow">
            
             <div class="col-md-6 heroTitle">
