--- a/terms15.html
+++ b/terms15.html
@@ -52,8 +52,8 @@
 </header>
 
 <div class="section-container">
-  <div class="container">
-      <div class="row section-container-spacer">
+  <div class="container classInfoContainer">
+      <div class="row section-container-spacer termsHead">
           <div class="col-xs-12 termTitle">
               <div class="text-center">
                   <h1 class="termH1">Class Info</h1>
@@ -66,13 +66,13 @@
       </div>
       
         <div class="row terms15">
-            <div id="position1" class="col-md-4">
+            <div id="position1" class="col-md-4 flexCard">
                 <div class="pricing-card pricing-primary pricing-first tipsCard">
                     <h3 class="zoomTitle"> Class Tips</h3>
                     <a href="Zoom_Instructions.pdf"><button class="btn zoomBtn"><i class="fas fa-file-pdf"></i>PDF</button></a><br>
                 </div>
             </div>                                                  
-            <div id="position2" class="col-md-4">
+            <div id="position2" class="col-md-4 flexCard">
                 <div class="pricing-card pricing-secondary pricing-fourth waiverCard">
                     <h3 class="waiverTitle">Class Waiver</h3>
                     <a href="Final_Waiver.pdf"><button class="btn waiverBtn"><i class="fas fa-file-pdf"></i>PDF</button></a><br>
