MQ iPhone Changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-<div class="white-text-container background-image-container heroImgHome contHeroFlex" style="background-image: url('./assets/images/hero3.jpg')">
+<div class="white-text-container background-image-container heroImgHome" style="background-image: url('./assets/images/hero3.jpg')">
     <div class="opacity"></div>
     <div class="container containerFlex">
         <div class="row titleRow">
